--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,5 +1,5 @@
 name: point_roulette
-description: Point Roulette Mobile App
+description: Point Roulette Mobile App - WebView wrapper for the point roulette service
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -11,11 +11,33 @@ dependencies:
     sdk: flutter
   webview_flutter: ^4.7.0
   connectivity_plus: ^5.0.2
+  flutter_native_splash: ^2.3.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+
+# App icon configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_background: "#6366F1"
+  adaptive_icon_foreground: "assets/images/app_icon_foreground.png"
+
+# Splash screen configuration
+flutter_native_splash:
+  color: "#6366F1"
+  image: assets/images/splash_logo.png
+  android: true
+  ios: true
+  android_12:
+    color: "#6366F1"
+    image: assets/images/splash_logo.png
