feat(mobile): Complete Flutter build for Android and iOS
- Build Android APK (mobile/point-roulette.apk, 40MB)
- Build iOS simulator app (build/ios/iphonesimulator/Runner.app)
- Upgrade Gradle 8.3->8.9, AGP 8.1.0->8.7.0, Kotlin 1.9->2.0
- Generate app icons for all densities (SVG to PNG conversion)
- Add iOS App Transport Security for local HTTP connections
- Fix connectivity_plus API change (List<> to single result)
- Add logout endpoint to AuthController
- Update CORS to allow localhost and 127.0.0.1 origins
- Update TODO.md with completed build tasks

--- a/mobile/ios/Runner/Info.plist
+++ b/mobile/ios/Runner/Info.plist
@@ -44,6 +44,13 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
