--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         applicationId = "com.pointroulette.point_roulette"
-        minSdk = 21
+        minSdkVersion = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
