fix(backend): Update Dockerfile and config for Railway deployment
- Use PORT env var instead of SERVER_PORT (Railway standard)
- Set SPRING_PROFILES_ACTIVE=prod as default
- Use Railway PostgreSQL variables (PGHOST, PGPORT, etc.)

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -61,10 +61,10 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/pointroulette}
+    url: jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:pointroulette}
     driver-class-name: org.postgresql.Driver
-    username: ${DATABASE_USERNAME:postgres}
-    password: ${DATABASE_PASSWORD:postgres}
+    username: ${PGUSER:postgres}
+    password: ${PGPASSWORD:postgres}
   jpa:
     hibernate:
       ddl-auto: update
