chore(ci): Remove Render deployment, use Railway GitHub integration
- Remove deploy-backend job (Render API)
- Backend deployment handled by Railway GitHub auto-deploy
- Fix invalid secrets check in step-level if conditions
- Use continue-on-error for Vercel deployment steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,35 +123,6 @@ jobs:
         env:
           NEXT_PUBLIC_API_URL: ${{ vars.NEXT_PUBLIC_API_URL || 'http://localhost:8080' }}
 
-  deploy-backend:
-    name: Deploy Backend
-    needs: [backend-test]
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download JAR artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-jar
-          path: backend/build/libs
-
-      - name: Deploy to Render
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
-        run: |
-          if [ -n "$RENDER_API_KEY" ] && [ -n "$RENDER_SERVICE_ID" ]; then
-            curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
-              -H "Authorization: Bearer $RENDER_API_KEY" \
-              -H "Content-Type: application/json"
-            echo "Deployment triggered on Render"
-          else
-            echo "Render secrets not configured, skipping deployment"
-          fi
-
   deploy-web-admin:
     name: Deploy Web Admin
     needs: [web-admin-test]
@@ -163,12 +134,12 @@ jobs:
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
+        continue-on-error: true
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_ADMIN }}
           working-directory: web-admin
-        if: ${{ secrets.VERCEL_TOKEN != '' }}
 
   deploy-web-user:
     name: Deploy Web User
@@ -181,9 +152,9 @@ jobs:
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
+        continue-on-error: true
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID_USER }}
           working-directory: web-user
-        if: ${{ secrets.VERCEL_TOKEN != '' }}
