fix(backend): Use DATABASE_URL for Railway PostgreSQL connection

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -61,10 +61,8 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:pointroulette}
+    url: ${DATABASE_URL}
     driver-class-name: org.postgresql.Driver
-    username: ${PGUSER:postgres}
-    password: ${PGPASSWORD:postgres}
   jpa:
     hibernate:
       ddl-auto: update
