--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -61,7 +61,7 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: ${DATABASE_URL}
+    url: jdbc:${DATABASE_URL}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
