fix(backend): Add SameSite=None cookie config for cross-domain auth
Cross-origin requests from Vercel to Railway require cookies with
SameSite=None and Secure=true to be sent properly.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -73,6 +73,13 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+server:
+  servlet:
+    session:
+      cookie:
+        same-site: none
+        secure: true
+
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
