--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -72,6 +72,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: always
 
 server:
   servlet:
