fix(backend): Disable JDBC session for dev/test profiles
Session storage is only needed in prod (multi-instance).
Dev and test use in-memory sessions (store-type: none).

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -41,6 +41,8 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+  session:
+    store-type: none
 
 springdoc:
   swagger-ui:
