fix(backend): Exclude SessionAutoConfiguration for dev/test profiles
spring-session-jdbc auto-configuration was breaking tests by trying
to insert into non-existent SPRING_SESSION table. Excluding the
auto-configuration entirely for dev/test profiles fixes this.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -41,8 +41,9 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
-  session:
-    store-type: none
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
 
 springdoc:
   swagger-ui:
